Fix: Bug where on thin displays the last track overlaps grid border

--- a/front/src/Dayview.css
+++ b/front/src/Dayview.css
@@ -47,7 +47,7 @@ h2 {
 
 @media (max-width: 600px) {
   .track {
-    max-height:100px;
+      /* max-height:100px; */
   }
   .track > p {
     background:pink;
